WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98801
After
r130344
, OpaqueJSString::string() shouldn't directly return the wrapped String
https://bugs.webkit.org/show_bug.cgi?id=98801
Summary
After r130344, OpaqueJSString::string() shouldn't directly return the wrapped...
Michael Saboff
Reported
2012-10-09 11:27:10 PDT
After
r130344
, OpaqueJSString has an internal String member that it returns directly via OpaqueJSString::string(). If this string should not be turned into an identifier, as OpaqueJSString is meant to be thread safe.
Attachments
Patch
(2.24 KB, patch)
2012-10-09 12:30 PDT
,
Michael Saboff
ggaren
: review+
ggaren
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2012-10-09 12:30:18 PDT
Created
attachment 167819
[details]
Patch
Geoffrey Garen
Comment 2
2012-10-09 17:54:06 PDT
Comment on
attachment 167819
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=167819&action=review
r=me
> Source/JavaScriptCore/API/OpaqueJSString.cpp:50 > + // Return a copy of the wrapped string, because the caller may make it an Identifier. > + if (m_string.is8Bit()) > + return String(m_string.characters8(), m_string.length()); > + return String(m_string.characters16(), m_string.length());
This could be String::isolatedCopy() instead.
Michael Saboff
Comment 3
2012-10-10 11:07:57 PDT
Committed
r130931
: <
http://trac.webkit.org/changeset/130931
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug