After r130344, OpaqueJSString::string() shouldn't directly return the wrapped String https://bugs.webkit.org/show_bug.cgi?id=98801

Reviewed by Geoffrey Garen.

Return a copy of the wrapped String so that the wrapped string cannot be turned into
an Identifier.

* API/OpaqueJSString.cpp:
(OpaqueJSString::string):
* API/OpaqueJSString.h:
(OpaqueJSString):


Canonical link: https://commits.webkit.org/116908@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130931 268f45cc-cd09-0410-ab3c-d52691b4dbfc